attempt to fix image rendering on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,8 @@ p {
   margin-top: 50px;
   margin-left: auto;
   margin-right: auto;
-  max-width: 600px;
+  max-width: 100%;
+  height: auto;
 }
 
 .post h6 {
@@ -506,7 +507,8 @@ p {
     margin-top: 50px;
     margin-left: auto;
     margin-right: auto;
-    width: 90%;
+    max-width: 100%;
+    height: auto;
   }
 
   .post h6 {
